# Pure-Python-Geospatial-Export

./: .gitignore  AUTHORS.txt  README.md  denver-cheyenne-geojson-snowflake.csv  denver-cheyenne-wkt-bigquery.csv  pyproject.toml  requirements.txt  tox.ini  write.py  wy-co-geojson-snowflake.csv  wy-co-wkt-bigquery.csv  wy-co-wkt-malformed.csv  wy-co.csv
.circleci/: config.yml
.cursor/rules/: testing.mdc
.github/workflows/: test.yml
docs/: dev_guide.md  wkb_detail.md
geomet/: wkb.py  wkt.py
ppge/: __init__.py  geospatial_export.py
ppge-tests/: test-ppge.py  test-pyshp.py
ppge-tests/test-geomet/: esri_test.py  test_geopackage.py  util_test.py  wkb_test.py  wkt_test.py
ppge/geomet/: README.md  geopackage.py  wkb.py
