[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pure-Python-Geospatial-Export"
version = "0.1.0"
dependencies = [
    "pyshp==2.3.1",
    "shapely==2.0.7",
]

[project.optional-dependencies]
test = [
    "geopandas==1.0.1",
    "ruff==0.12.2",
]
